syntax = "proto3";
package proto;
option go_package = "../proto";

service Redis {
    rpc RedisGetComposes(RedisGetComposesRequest) returns (RedisGetComposesResponse);
    rpc RedisOperation(RedisOperationRequest) returns (RedisCommonResponse);
    rpc RedisSetPort(RedisSetPortRequest) returns (RedisCommonResponse);
    rpc RedisGetConf(RedisGetConfRequest) returns (RedisGetConfResponse);
    rpc RedisSetConf(RedisSetConfRequest) returns (RedisCommonResponse);
    rpc RedisGetRemoteAccess(RedisGetRemoteAccessRequest) returns (RedisGetRemoteAccessResponse);
    rpc RedisSetRemoteAccess(RedisSetRemoteAccessRequest) returns (RedisCommonResponse);
    rpc RedisGetRootPassword(RedisGetRootPasswordRequest) returns (RedisGetRootPasswordResponse);
    rpc RedisSetRootPassword(RedisSetRootPasswordRequest) returns (RedisCommonResponse);
}

message RedisCommonResponse {
  bool success = 1;
  string error = 2;
}

message RedisGetComposesRequest {
    uint32 host_id = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message RedisGetComposesResponse {
    int64 total = 1;
    repeated RedisComposesInfo items = 2;
}

message RedisComposesInfo {
    string name = 1;
    string version = 2;
    string port = 3;
    string status = 4;
}

message RedisOperationRequest {
    uint32 host_id = 1;
    string name = 2;
    string operation = 3;
}

message RedisSetPortRequest {
    uint32 host_id = 1;
    string name = 2;
    string port = 3;
}

message RedisGetConfRequest {
    uint32 host_id = 1;
    string name = 2;
}

message RedisGetConfResponse {
    string content = 1;
}

message RedisSetConfRequest {
    uint32 host_id = 1;
    string name = 2;
    string content = 3;
}

message RedisGetRemoteAccessRequest {
    uint32 host_id = 1;
    string name = 2;
}

message RedisGetRemoteAccessResponse {
    bool remote_access = 1;
}

message RedisSetRemoteAccessRequest {
    uint32 host_id = 1;
    string name = 2;
    bool remote_access = 3;
}

message RedisGetRootPasswordRequest {
    uint32 host_id = 1;
    string name = 2;
}

message RedisGetRootPasswordResponse {
    string pass = 1;
}

message RedisSetRootPasswordRequest {
    uint32 host_id = 1;
    string name = 2;
    string new_pass = 3;
}